# technical

./: README.md  STEPS.md
technical_front/: package-lock.json  package.json  pnpm-lock.yaml
technical_front/src/: App.css  App.tsx  main.tsx
technical_front/src/api/: client.ts
technical_front/src/types/: entities.ts
technical_server/: .env  .env.default  README.md  pyproject.toml
technical_server/app/: crud.py  database.py  dependencies.py  main.py  schemas.py  settings.py
technical_server/app/database/: db.dump
technical_server/app/routers/: projects.py
